# base_esp32

./: .gitignore  ESP32_devkit_v1.kicad_sym  MX1508.bak  MX1508.kicad_sym  Readme.md  TASK.md  Todo.md  base_esp32 copy.kicad_pcb  base_esp32.csv  base_esp32.kicad_pcb  base_esp32.kicad_prl  base_esp32.kicad_pro  base_esp32.kicad_sch  esp32_devkit_v1.kicad_sym  fp-info-cache  fp-lib-table  k2f_settings.json  mkdocs.yml  pyproject.toml  sym-lib-table  to_changes.md
assets/ESP32-DEVKIT-V1/: ESP32-DEVKIT-V1.lib
docs/: index.md
docs/alimentacion/: overview.md  proteccion.md  reguladores.md
docs/ensamblaje/: componentes.md  index.md  paso-a-paso.md  soldadura.md  verificacion.md
docs/fabricacion/: fabricacion.md  fritzing.md  gerber.md
docs/hardware/: componentes.md  esquematico.md  overview.md  pcb.md  pinout.md
docs/images/: 3D  fritzing  fritzing_out  gerber  pcb
docs/kicad/: estructura.md  instalacion.md  librerias.md  modificacion.md
docs/perifericos/: actuadores.md  buzzer.md  entradas.md  leds.md  (+2 more)
fritzing_out/: README.txt  artifact_validation.json  base_esp32.fzp  base_esp32.fzpz  board_model.json  fritzing_connectors.json  k2f_overlay_mode.json
gerber/: base_esp32-B_Cu.gbl  base_esp32-B_Mask.gbs  base_esp32-B_Paste.gbp  base_esp32-B_Silkscreen.gbo  base_esp32-Edge_Cuts.gm1  base_esp32-F_Cu.gtl  base_esp32-F_Mask.gts  base_esp32-F_Paste.gtp  base_esp32-F_Silkscreen.gto  base_esp32-NPTH-drl_map.gbr  base_esp32-NPTH.drl  base_esp32-PTH-drl_map.gbr  base_esp32-PTH.drl
logo_footprint/: logo_x.kicad_mod  qr.kicad_mod
models/: micro_switch_slider.STEP
(+15 files in other folders)
