[project]
name = "documentation base"
version = "0.1.0"
description = "Board to training with esp32 devkit v4"
authors = [
    {name = "Josef Leyva",email = "jalm_x@hotmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material (>=9.7.6,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
